; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_help.c_is_git_command.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_help.c_is_git_command.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"git-\00", align 1
@main_cmds = common dso_local global i32 0, align 4
@other_cmds = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @is_git_command to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_git_command(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i64 @is_builtin(i8* %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  store i32 1, i32* %2, align 4
  br label %20

8:                                                ; preds = %1
  %9 = call i32 @load_command_list(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32* @main_cmds, i32* @other_cmds)
  %10 = load i8*, i8** %3, align 8
  %11 = call i64 @is_in_cmdlist(i32* @main_cmds, i8* %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %17, label %13

13:                                               ; preds = %8
  %14 = load i8*, i8** %3, align 8
  %15 = call i64 @is_in_cmdlist(i32* @other_cmds, i8* %14)
  %16 = icmp ne i64 %15, 0
  br label %17

17:                                               ; preds = %13, %8
  %18 = phi i1 [ true, %8 ], [ %16, %13 ]
  %19 = zext i1 %18 to i32
  store i32 %19, i32* %2, align 4
  br label %20

20:                                               ; preds = %17, %7
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i64 @is_builtin(i8*) #1

declare dso_local i32 @load_command_list(i8*, i32*, i32*) #1

declare dso_local i64 @is_in_cmdlist(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
